<resources>
    <string name="app_name">fixmyrideapp</string>
    <string name="logo_splashscreen">Splashscreen Logo</string>
    <string name="icon_call">Call</string>
    <string name="icon_telp_card">Emergency Icon</string>
    <string name="icon_article_card">Article Icon</string>
    <string name="icon_bar">Icon Bar</string>
    <string name="label_call">Home</string>
    <string name="label_contact">Contact</string>
    <string name="label_article">Article</string>
    <string name="fragment_contact">Fragment Contact</string>
    <string name="fragment_article">Fragment Article</string>
    <string name="message_alert">Are you sure you want to call this number?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="panic_button_desc">Panic Button</string>
    <string name="panic_button_label">Press 3 times to search the nearest emergency number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="id_image">Identification Card Picture</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <!-- Login & Register -->
    <string name="pw_warning">Password must at least contains 8 characters!</string>
    <string name="pw_hint">Enter your password</string>
    <string name="email_hint">writeemail@place.com</string>
    <string name="email_warning">Email is not valid!</string>
    <string name="name_hint">Enter your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now_text">Not a member? Register here!</string>
    <string name="login_now_text">Already a member? Login here!</string>
    <string name="logo_description">EmergenZ\'s Logo</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="username_hint">Enter your username</string>
    <string name="email_empty">Email is empty!</string>
    <string name="pw_empty">Password is empty!</string>
    <string name="username_empty">Username is empty!</string>

    <!-- Profile -->
    <string name="takepic_fail">Failed to take a picture</string>
    <string name="camera_fail">Failed to get the camera</string>
    <string name="btn_take_a_photo">Take a Photo</string>
    <string name="capture_image">Capture the Image</string>
    <string name="iv_setting">Setting</string>
    <string name="iv_profile">Profile</string>
    <string name="iv_pfp">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="change_detail">Change your detail</string>
    <string name="nik">NIK</string>
    <string name="apply">Apply</string>
    <string name="perm_lack">Permission not granted</string>
    <string name="address">Address</string>
    <string name="field_empty">Not filled in</string>
    <string name="gender">Gender</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="full_name">FixMyRide\'s Guest</string>
    <string name="iv_identity_card_cd">Image Container for your ID Card</string>
    <string name="full_name_field">Full Name</string>
    <string name="id_card">Id Card</string>
    <string name="img_lack">Upload your image first</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Theme</string>
    <string name="about_title">Version</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="note_card_urgent">*Can only be used on certain cities</string>
    <string name="exit">Press again to exit</string>
    <string name="retry">Retry</string>
    <string name="location_fail">Failed to retrieve location.</string>
    <string name="full_name_empty">Fullname is empty!</string>
    <string name="nik_empty">NIK is empty!</string>
    <string name="province_empty">Province is empty!</string>
    <string name="city_empty">City is empty!</string>
    <string name="address_empty">Address is empty!</string>
    <string name="detail_empty">Please fill your details!</string>
    <string name="label_history">History</string>
    <string name="history_not_found">History not found.</string>
    <string name="label_news">News</string>
    <string name="label_recommendation">Recommendation</string>
    <string name="youre_here">You\'re Here</string>
    <string name="type">Type</string>
    <string name="title_activity_news">NewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="photo">photo</string>
    <string name="title">Title\n</string>
    <string name="error_message">Error Message</string>
    <string name="get_near_location">Double click to see the nearest Repair shop!</string>
    <string name="search_button">Search Button</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tahun_motor">Tahun Motor</string>
    <string name="km_motor">KM Motor</string>
    <string name="gejala_1">Gejala 1</string>
    <string name="gejala_2">Gejala 2</string>
    <string name="gejala_3">Gejala 3</string>
    <string name="merk_motor">Merk Motor</string>
    <string name="pernah_nservice">Pernah\nService?</string>
    <string name="permasalahan">Permasalahan :</string>
    <string name="hasil">Hasil\nHasil</string>
    <string name="solusi">Solusi:</string>
    <string name="jenis_motor">Jenis Motor</string>
    <string name="alamat">alamat</string>
    <string name="nama_bengkel">nama bengkel</string>
    <string name="_2_6">(2.6)</string>
    <string name="rute_perjalanan">Rute Perjalanan</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
    <string name="nama">Nama</string>
    <string name="male_female">Male/Female</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="submit">Submit</string>
</resources>